<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".AddShoeFragment">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        app:cardBackgroundColor="@color/colorpink">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_7sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3sdp"
                android:labelFor="@id/shoesname"
                android:text="@string/shoes_name"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                />
            <EditText
                android:padding="@dimen/_5sdp"
                android:id="@+id/shoesname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/_18sdp"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3sdp"
                android:labelFor="@id/shoedescrtiption"
                android:text="@string/shoes_description"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                />
            <EditText
                android:padding="@dimen/_5sdp"
                android:id="@+id/shoedescrtiption"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/_18sdp"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3sdp"
                android:labelFor="@id/company"
                android:text="@string/company"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                />
            <EditText
                android:padding="@dimen/_5sdp"
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/_18sdp"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3sdp"
                android:labelFor="@id/size"
                android:text="Size"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                />
            <EditText
                android:padding="@dimen/_5sdp"
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textSize="@dimen/_18sdp"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3sdp"
                android:labelFor="@id/price"
                android:text="@string/price"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                />
            <EditText
                android:padding="@dimen/_5sdp"
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textSize="@dimen/_18sdp"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3sdp"
                android:labelFor="@id/imageurl"
                android:text="@string/image_url"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                />
            <EditText
                android:padding="@dimen/_5sdp"
                android:id="@+id/imageurl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/_18sdp"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/buttonshape"
                    android:backgroundTint="@color/white"
                    android:text="@string/cancel_opreation"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/colorpink"
                    app:layout_constraintEnd_toStartOf="@+id/addbutton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
                <Button
                    android:id="@+id/addbutton"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/buttonshape"
                    android:backgroundTint="@color/white"
                    android:text="@string/add_shoes"
                    android:textColor="@color/colorpink"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cancel_button"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</FrameLayout>
</layout>