<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.LoginFragment">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorpink"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp">
            <!-- this linearlayout used to put view under each other in vertically mode -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/Nametext"
                    android:text="@string/name"
                    android:textSize="22sp"
                    android:textStyle="bold"
                     />

                <EditText
                    android:id="@+id/Nametext"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/emailtext"
                    android:text="@string/email"
                    android:textSize="22sp"
                    android:textStyle="bold"
                     />

                <EditText
                    android:id="@+id/emailtext"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@id/emailtext"
                    android:text="@string/password"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/passowrdedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/rounded_edit_text"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <!--this constraintlayout used to create chain in horizntal spread cheet -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp">
                    <Button
                        android:id="@+id/loginbutton"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:background="@drawable/buttonshape"
                        android:backgroundTint="@color/white"
                        android:text="@string/login"
                        android:textSize="16sp"
                        android:textColor="@color/colorpink"
                        app:layout_constraintEnd_toStartOf="@+id/signbutton"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />
                    <Button
                        android:id="@+id/signbutton"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:background="@drawable/buttonshape"
                        android:backgroundTint="@color/white"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorpink"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/loginbutton"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
</FrameLayout>

</layout>